add test workflow

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,8 @@ knitr::opts_chunk$set(
 # bis620.2023.final
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/kaneplusplus/bis620.2023/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/kaneplusplus/bis620.2023/actions/workflows/R-CMD-check.yaml)
+[![R-CMD-check](https://github.com/yywwwyy/bis620.2023.final/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/yywwwyy/bis620.2023.final/actions/workflows/R-CMD-check.yaml)
+[![test-coverage](https://github.com/yywwwyy/bis620.2023.final/actions/workflows/test-coverage.yaml/badge.svg)](https://github.com/yywwwyy/bis620.2023.final/actions/workflows/test-coverage.yaml)
 <!-- badges: end -->
 
 
@@ -26,7 +27,7 @@ You can install the development version of bis620.2023.final from [GitHub](https
 
 ```{r}
 # install.packages("devtools")
-devtools::install_github("yywwwyy/bis620.2023.final")
+# devtools::install_github("yywwwyy/bis620.2023.final")
 ```
 
 ## Example
